bib: add GPT-3.5-turbo

--- a/main.bib
+++ b/main.bib
@@ -366,3 +366,11 @@
     title        = {Common Crawl},
     url          = {https://commoncrawl.org/},
 }
+
+% GPT-3.5-turbo 
+@article{brown2020language,
+  title={Language models are few-shot learners},
+  author={Brown, Tom B and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda and others},
+  journal={arXiv preprint arXiv:2005.14165},
+  year={2020}
+}
