UPV_ntests, fix label

--- a/src/tables/UPV_ntests.tex
+++ b/src/tables/UPV_ntests.tex
@@ -13,5 +13,6 @@
         All       & 6605            \\
         \hline
     \end{tabular}
-    \caption{Information about UPV FAQ tests} \label{table:UPV_FAQ_info}
+    \caption{Information about UPV FAQ tests}
+    \label{table:UPV_FAQ_info}
 \end{table}
