methodology: Add CPU info

--- a/src/methodology.tex
+++ b/src/methodology.tex
@@ -385,6 +385,9 @@ This selection is based on its performance as the highest-scoring transformer mo
 For the \ac{LLM} component of \ac{RAG}, we will utilize GPT-3.5-turbo \cite{brown2020language}.
 
 
+\subsection{Experiment hardware}
+The computational workload was handled by an Intel Core i7-8550U CPU.
+This is a 14nm mobile processor featuring 4 cores and 8 threads with a base clock of 1.8 GHz and a turbo boost frequency of 4.0 GHz.
 
 
 
