Fix SimCSE-RetroMAE-Small name

--- a/src/tables/models_balanced.tex
+++ b/src/tables/models_balanced.tex
@@ -4,7 +4,7 @@
       \toprule
       \textbf{Model} & \textbf{QMA}\textsubscript{d} & \textbf{AMA}\textsubscript{d} & \textbf{QMA}\textsubscript{dl} & \textbf{AMA}\textsubscript{dl} & \textbf{\#params} \\
       \midrule
-      simcse-retromae-small-cs & 0.8682 & 0.3647 & 0.8649 & 0.3316 & 24M \\
+      SimCSE-RetroMAE-Small & 0.8682 & 0.3647 & 0.8649 & 0.3316 & 24M \\
       GTE\textsubscript{Small} & 0.8549 & 0.3632 & 0.8543 & 0.3634 & 33M \\
       mE5\textsubscript{Small} & 0.8952 & 0.6078 & 0.8564 & 0.4446 & 118M \\
       mE5\textsubscript{Base} & 0.8961 & 0.6019 & 0.8726 & 0.5134 & 278M \\
