Add Umar Jamil nocite

--- a/main.bib
+++ b/main.bib
@@ -374,3 +374,11 @@
   journal={arXiv preprint arXiv:2005.14165},
   year={2020}
 }
+
+
+% RAG with different embeddings
+@misc{umarjamilai,
+      title = {Umar Jamil [YouTube Channel]},
+      author = {Umar Jamil},
+      url = {https://www.youtube.com/@umarjamilai}
+}
