--- a/src/literature_review.tex
+++ b/src/literature_review.tex
@@ -51,7 +51,7 @@ However, it's important to acknowledge that FastText also has limitations:
 \end{itemize}
 
 \section{Transformer-based models}
-Transformer models \cite{vaswani2023attention} underpin powerful NLP models like BERT.
+Transformer models \cite{vaswani2023attention} \nocite{umarjamilai} underpin powerful NLP models like BERT.
 A key advantage is their self-attention mechanism, which assigns importance to words based on context, not just position.
 This enables efficient parallel processing of entire sentences.
 Architecture of transformers visualized in \reffig{fig:model-arch}
@@ -93,7 +93,7 @@ Confusion matrices are a widely used tool for evaluating classification algorith
 A confusion matrix is a table that describes the performance of a classification model by comparing predicted and actual labels.
 
 \section{\acf{RAG}}
-\ac{RAG} \cite{lewis2021retrievalaugmented} is an advanced \ac{NLP} framework that combines the strengths of retrieval-based and generation-based models to produce high-quality, contextually relevant text based on provided document (web-page etc.), instruction and query (question). 
+\ac{RAG} \cite{lewis2021retrievalaugmented} \nocite{umarjamilai} is an advanced \ac{NLP} framework that combines the strengths of retrieval-based and generation-based models to produce high-quality, contextually relevant text based on provided document (web-page etc.), instruction and query (question). 
 
 \subsection{Architecture of \ac{RAG}}
 The \ac{RAG} algorithm leverages a two-stage approach for answer generation: retrieval and generation.
