--- a/src/abbreviations.tex
+++ b/src/abbreviations.tex
@@ -1,32 +1,38 @@
 %!TEX root = ../main.tex
 
 \begin{acronym}
-  \acro{CTU}[CTU]{Czech Technical University}
-  \acro{API}[API]{Application Programming Interface}
-  \acro{RAG}[RAG]{Retrieval-Augmented Generation}
+  % Usual CS acronyms
   \acro{NLP}[NLP]{Natural Language Procession}
+  \acro{RAG}[RAG]{Retrieval-Augmented Generation}
   \acro{STS}[STS]{Semantic Textual Similarity}
   \acro{QA}[QA]{Question Answering}
-  \acro{BERT}[BERT]{Bidirectional Encoder Representations from Transformers}
-  \acro{CBOW}[CBOW]{Continuous Bag-of-Words}
-  \acro{GloVe}[GloVe]{Global vectors}
   \acro{ML}[ML]{Machine Learning}
   \acro{NN}[NN]{Neural Network}
-  \acro{BoW}[BoW]{Bag-of-Words}
-  \acro{TF-IDF}[TF-IDF]{Term Frequency-Inverse Document Frequency}
+  \acro{LLM}[LLM]{Large Language Model}
   \acro{OOV}[OOV]{Out of vocabulary}
-  \acro{mBERT}[mBERT]{Multilingual Bidirectional Encoder Representations from Transformers}
+
+  % Text Representation methods
+  \acro{TF-IDF}[TF-IDF]{Term Frequency-Inverse Document Frequency}
+  \acro{BoW}[BoW]{Bag-of-Words}
+  \acro{CBOW}[CBOW]{Continuous Bag-of-Words}
+  \acro{GloVe}[GloVe]{Global vectors}
+  
+  % Benchmarks
   \acro{MTEB}[MTEB]{Massive Text Embedding Benchmark}
+  
+  % Models
+  \acro{mBERT}[mBERT]{Multilingual Bidirectional Encoder Representations from Transformers}
+  \acro{BERT}[BERT]{Bidirectional Encoder Representations from Transformers}
   \acro{ALBERT}[ALBERT]{A Lite BERT}
-  \acro{SimCSE}[SimCSE]{Simple Contrastive Learning of Sentence Embeddings}
-  \acro{RetroMAE}[RetroMAE]{Retrieval-oriented Language Models Via Masked Auto-Encoder}
   \acro{mE5}[mE5]{Multilingual E5}
   \acro{LaBSE}[LaBSE]{Language-Agnostic BERT Sentence Embedding}
-  \acro{MLM}[MLM]{Masked Language Modeling}
   \acro{XLM-R}[XLM-R]{XLM-Roberta}
-  \acro{NSP}[NSP]{Next Sentence Prediction}
   \acro{BGE}[BGE]{BAAI General Embeddings}
-  \acro{GTE}[GTE]{General Text Embedding}
-  \acro{LLM}[LLM]{Large Language Model}
-\end{acronym}
+  \acro{GTE}[GTE]{General Text Embedding}  
 
+  % Training methods
+  \acro{MLM}[MLM]{Masked Language Modeling}
+  \acro{NSP}[NSP]{Next Sentence Prediction}
+  \acro{SimCSE}[SimCSE]{Simple Contrastive Learning of Sentence Embeddings}
+  \acro{RetroMAE}[RetroMAE]{Retrieval-oriented Language Models Via Masked Auto-Encoder}
+\end{acronym}
